[project]
name = "an-intro-to-agentic-ai-with-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.5.14",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "openai>=2.30.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.49",
]
